remoting/client/queued_task_poster.cc
@@ -16,7 +16,11 @@ QueuedTaskPoster::QueuedTaskPoster(
     : target_task_runner_(target_task_runner),
       weak_factory_(this) {}
 
-QueuedTaskPoster::~QueuedTaskPoster() = default;
+QueuedTaskPoster::~QueuedTaskPoster() {
+  if (source_task_runner_) {
+    DCHECK(source_task_runner_->BelongsToCurrentThread());
+  }
+}
 
 void QueuedTaskPoster::AddTask(const base::Closure& closure) {
   if (!source_task_runner_) {
